--- a/tab.html
+++ b/tab.html
@@ -49,10 +49,10 @@
         <div class="sidebar">
             <h2>Profile</h2>
             <ul>
-                <li><a href="http://127.0.0.1:5500/index.html">Main</a></li>
-                <li><a href="http://127.0.0.1:5500/tab.html">Profile</a></li>
-                <li><a href="http://127.0.0.1:5500/about.html">about me</a></li>
-                <li><a href="http://127.0.0.1:5500/tnk.html">Thanks</a></li>
+                <li><a href="./index.html">Main</a></li>
+                <li><a href="./tab.html">Profile</a></li>
+                <li><a href="./about.html">about me</a></li>
+                <li><a href="./tnk.html">Thanks</a></li>
             </ul>
         </div>
     <footer>
