--- a/tnk.html
+++ b/tnk.html
@@ -136,10 +136,10 @@ input[id="menuicon"]:checked + label + div {
         <div class="sidebar">
             <h2>Option</h2>
             <ul>
-                <li><a href="http://127.0.0.1:5500/index.html">Main</a></li>
-                <li><a href="http://127.0.0.1:5500/tab.html">Profile</a></li>
-                <li><a href="http://127.0.0.1:5500/about.html">About Me</a></li>
-                <li><a href="http://127.0.0.1:5500/tnk.html">Thanks</a></li>
+                <li><a href="./index.html">Main</a></li>
+                <li><a href="./tab.html">Profile</a></li>
+                <li><a href="./about.html">About Me</a></li>
+                <li><a href="./tnk.html">Thanks</a></li>
             </ul>
         </div>
 </body>
