--- a/about.html
+++ b/about.html
@@ -27,22 +27,22 @@
 	</header>
 	<div>
 		<div>
-			<img src="images/name.png"><p>이름 : 김민수</p>
+			<img src="./name.png"><p>이름 : 김민수</p>
 		</div>
 		<div>
-			<img src="images/date.png"><p>생일 : 030128</p>
+			<img src="./date.png"><p>생일 : 030128</p>
 		</div>
 		<div>
-			<img src="images/adress.png"><p>주소 : 동작구 상도동</p>
+			<img src="./adress.png"><p>주소 : 동작구 상도동</p>
 			</div>
 		<div>
-			<img src="images/call.png"><p>전화번호 : 010-3132-2034</p>
+			<img src="./call.png"><p>전화번호 : 010-3132-2034</p>
 		</div>
 		<div>
-			<img src="images/mail.png"><p>이메일 : fndlalstn@gmail.com</p>
+			<img src="./mail.png"><p>이메일 : fndlalstn@gmail.com</p>
 		</div>
 		<div>	
-			<img src="images/school.png"><p>학력 : 동양미래대학 재학</p></label>
+			<img src="./school.png"><p>학력 : 동양미래대학 재학</p></label>
 		</div>
 	</div>
 
